@@ -84,6 +84,8 @@ pread
 preadv
 pwrite
 pwritev
+readv
+writev
 ftruncate
 iovec
 uint8
